# openfang

./: .gitignore  AGENTS.md  AGENTS.md.bkp  AUDIT.md  CLAUDE.md  Cargo.toml  README.md  build.sh  check.sh  check_bg.sh  fix_routes.py  fix_routes2.py  fixup_api.py  fixup_api2.py  fixup_api3.py  fixup_api5.py  openfang.toml.example  rtr-cluster.md
.cursor/plans/: Untitled  candle_inference_backend_b41313ed.plan.md  inline_approval_cards_e0946289.plan.md  memory_architecture_upgrade_1e4ac81e.plan.md  memory_intelligence_completion_b83e2a0d.plan.md  native_ml_integration_with_surrealdb_hardening_a78dd37c.plan.md  openfang_config_audit_79cc44f9.plan.md  surrealdb_memory_layer_hardening_41e8f327.plan.md  tui-api_alignment_fix_a61e4a24.plan.md  tui_settings_loadstate_8fb338bc.plan.md
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  rate_limiter.rs  routes.rs  server.rs  vad.rs  voice.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html  voice.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/js/: api.js  voice-client.js
crates/openfang-api/static/js/pages/: chat.js
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs  skill_config_api_test.rs
crates/openfang-channels/src/: gitter.rs  keybase.rs  lib.rs  telegram.rs
crates/openfang-cli/: Cargo.toml
crates/openfang-cli/src/: main.rs  mcp.rs
crates/openfang-cli/src/tui/: chat_runner.rs  event.rs  mod.rs
crates/openfang-cli/src/tui/screens/: settings.rs
crates/openfang-hands/src/: bundled.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: approval.rs  config_reload.rs  kernel.rs  metering.rs  sync_facade.rs  triggers.rs  wizard.rs
crates/openfang-kernel/tests/: agent_manifest_authority_test.rs  integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/openfang-memory/: Cargo.toml
crates/openfang-memory/src/: consolidation.rs  db.rs  knowledge.rs  lib.rs  semantic.rs  session.rs  structured.rs  substrate.rs  test_syntax.rs  usage.rs
crates/openfang-memory/tests/: audit_readonly.rs  datetime_backfill.rs
crates/openfang-migrate/src/: lib.rs  openclaw.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  audit.rs  browser.rs  candle_classifier.rs  candle_embedding.rs  candle_ner.rs  candle_reranker.rs  candle_vad.rs  compactor.rs  embedding.rs  host_functions.rs  kernel_handle.rs  lib.rs  mcp.rs  mcp_server.rs  model_cache.rs  model_catalog.rs  prompt_builder.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/openfang-runtime/src/drivers/: claude_code.rs  mod.rs
crates/openfang-runtime/tests/: corefile_authorship.rs
crates/openfang-skills/src/: clawhub.rs  lib.rs
crates/openfang-types/src/: agent.rs  capability.rs  config.rs  datetime.rs  event.rs  lib.rs  memory.rs  memory_dimensions.rs  scheduler.rs  serde_compat.rs  tool_compat.rs
docs/: agent-templates.md  architecture.md  configuration.md
docs copy/: backend-architecture.md  exploration.md  foundations.md  mind_transcript_breakdown.md  research-redb.md  research-surrealdb-multi-model-query.md  research-surrealkv.md  research.md
docs/architecture/: AGENTS.md  memory-intelligence.md  surrealdb-practical-architecture.md  voice-intelligence.md
docs/architecture/corefiles/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  VOICE.md
docs/archive/: Best STT TTS Stack for RTX 2080 — 2026 Edition.md  OF_AGENTS.md  rtr-cluster.md  voice-barge-in-analysis.md
docs/archive/sessions/: 2026-03-27-handoff.md  2026-03-29-handoff.md  2026-03-30-handoff-2.md  2026-03-30-handoff-4.md  2026-03-31-handoff.md  2026-04-06-handoff.md  2026-04-20-cleanup-handoff.md  2026-04-20-handoff.md  2026-04-22-handoff.md  2026-04-25-handoff.md  2026-04-25-postmortem.md  openfang-surrealdb-audit-prompt.md  transcript.md
docs/references/: AGENTS.md  config.toml.bak  full.config.toml  migration_report.md  rtr-cluster.md  switch-tts-to-projector.sh
docs/research/: 2026-04-07.md  Architecture Guide_ Implementing AutoDream Memory Consolidation for AI Agents.md  cursor_document_and_file_references.md  hybrid_memory_exploration.md  memory-architecture-exploration-rev2.md  memory-architecture-exploration.md  memory-system-analysis.md  memory_intelligence_review.md  models.md  research-surrealdb-hnsw.md  surrealdb-openfang-reference.md  voice-barge-in-analysis.md  voice-pipeline-models.md
docs/sessions/: 2026-03-27-handoff-2.md  2026-03-30-handoff-3.md  2026-03-30-handoff.md  2026-04-01-handoff.md  2026-04-06-handoff-2.md  2026-04-07-handoff-3.md  2026-04-22-handoff.md  2026-04-25-classifier-contract-handoff.md  2026-04-25-postmortem.md  2026-04-28-repo-handling-handoff.md  2026-04-29-memory-dimensionality.md  cursor_current_steady_state_review.md  prompt.md
