[package]
name = "openfang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the OpenFang Agent OS"

[features]
default = []
# Full in-process Candle stack (embeddings, NER, reranker on CUDA/CPU via Candle).
memory-candle = ["openfang-api/memory-candle", "openfang-kernel/memory-candle"]

[[bin]]
name = "openfang"
path = "src/main.rs"

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-kernel = { path = "../openfang-kernel", default-features = false }
openfang-api = { path = "../openfang-api", default-features = false }
openfang-migrate = { path = "../openfang-migrate" }
openfang-skills = { path = "../openfang-skills" }
openfang-extensions = { path = "../openfang-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
openfang-runtime = { path = "../openfang-runtime", default-features = false }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
tempfile = { workspace = true }
