[package]
name = "openfang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for OpenFang"

[features]
# In-process Candle (CUDA) for embeddings / NER / reranking. Off by default so the
# main `openfang` binary builds without nvcc, candle-kernels, or a CUDA toolchain.
# Enable with: cargo build -p openfang-cli --features memory-candle
default = []
memory-candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-memory = { path = "../openfang-memory" }
openfang-skills = { path = "../openfang-skills" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true }
http = "1"

tokio-tungstenite = "0.24"
shlex = "1"

# Candle in-process inference — optional; see feature `memory-candle`.
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
# candle-onnx = { workspace = true, optional = true }  # Phase 2: protoc + ONNX models
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
